--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,9 @@ ipython_config.py
 #   commonly ignored for libraries.
 #uv.lock
 
+# Test output files
+integration_test_results.txt
+
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
